Fix X and Y in prepar_data

--- a/baseline_rgb.ipynb
+++ b/baseline_rgb.ipynb
@@ -68,7 +68,7 @@
     "VAL_SIZE = len(X)/10\n",
     "TEST_SIZE = len(X) - TRAIN_SIZE - VAL_SIZE\n",
     "\n",
-    "X_train, y_train, X_val, y_val, X_test, y_test = prepar_data(TRAIN_SIZE, VAL_SIZE, TEST_SIZE)"
+    "X_train, y_train, X_val, y_val, X_test, y_test = prepar_data(X, y, TRAIN_SIZE, VAL_SIZE, TEST_SIZE)"
    ]
   },
   {
