--- a/two_inputs.ipynb
+++ b/two_inputs.ipynb
@@ -372,24 +372,21 @@
    },
    "outputs": [],
    "source": [
-    "all_run_time = 0 \n",
-    "result = 0 \n",
-    "count = 1000\n",
-    "full_start_time = time.time() \n",
-    "for i in range(count):\n",
-    "    start_time = time.time() \n",
-    "    res = net(X_test[:1]) \n",
-    "    run_time = time.time() - start_time \n",
-    "    all_run_time += run_time \n",
-    "    # print run_time \n",
-    "    # print res \n",
-    "    result += int(1/run_time) \n",
-    "    # print int(1/run_time)\n",
-    "run_time = time.time() - full_start_time\n",
-    "print 'Result:' \n",
-    "print '\\tRun time:\\t\\t{:.3f}'.format(run_time)\n",
-    "print '\\tAverage time:\\t\\t{:.5f}'.format(all_run_time/count) \n",
-    "print '\\tPer second:\\t\\t{:.5f}'.format(count/run_time)"
+    "test_acc = 0\n",
+    "test_batches = 0\n",
+    "for batch in iterate_minibatches(X_test, X_test_new, y_test, 500):\n",
+    "    inputs, inputs_new, targets = batch\n",
+    "    acc = accuracy_fun(inputs, inputs_new, targets)\n",
+    "    test_acc += acc\n",
+    "    test_batches += 1\n",
+    "print(\"Final results:\")\n",
+    "print(\"  test accuracy:\\t\\t{:.2f} %\".format(\n",
+    "    test_acc / test_batches * 100))\n",
+    "# if(max_accuracy<(test_acc / test_batches * 100)):\n",
+    "#     max_accuracy = test_acc / test_batches * 100\n",
+    "\n",
+    "# max_accuracy = test_acc / test_batches * 100\n",
+    "# print max_accuracy"
    ]
   },
   {
