Fix error in validation an speed test and add new weight

--- a/two_inputs.ipynb
+++ b/two_inputs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -70,23 +70,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#np.save('x.npy', X)\n",
-    "#np.save('x_new.npy', X_new)\n",
-    "#np.save('y.npy', y)\n",
+    "np.save('x.npy', X)\n",
+    "np.save('x_new.npy', X_new)\n",
+    "np.save('y.npy', y)\n",
     "\n",
-    "X, X_new, y = np.load('x.npy'), np.load('x_new.npy'), np.load('y.npy')\n",
-    "y_new = y"
+    "# X, X_new, y = np.load('x.npy'), np.load('x_new.npy'), np.load('y.npy')\n",
+    "# y_new = y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -105,19 +105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(25000, 1, 60, 60) (25000, 3, 60, 60)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_X = T.tensor4(\"X cat/dog image\")\n",
     "target_y = T.vector(\"target Y cat/dog\",dtype='int32')\n",
@@ -138,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -193,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -257,7 +249,7 @@
     "    # And a full pass over the validation data:\n",
     "    val_acc = 0\n",
     "    val_batches = 0\n",
-    "    for batch in iterate_minibatches(X_val, y_val, BATCH_SIZE, X_train_new):\n",
+    "    for batch in iterate_minibatches(X_val, y_val, BATCH_SIZE, X_val_new):\n",
     "        inputs, inputs_new, targets = batch\n",
     "        val_acc += accuracy_fun(inputs, inputs_new, targets)\n",
     "        val_batches += 1\n",
@@ -286,7 +278,7 @@
    "source": [
     "test_acc = 0\n",
     "test_batches = 0\n",
-    "for batch in iterate_minibatches(X_test, X_test_new, y_test, 500):\n",
+    "for batch in iterate_minibatches(X_test, y_test, 500, X_test_new):\n",
     "    inputs, inputs_new, targets = batch\n",
     "    acc = accuracy_fun(inputs, inputs_new, targets)\n",
     "    test_acc += acc\n",
@@ -316,8 +308,8 @@
    },
    "outputs": [],
    "source": [
-    "# weight = np.load('the weight of the networks/xenx_network_v_1_baseline_weight.npy')\n",
-    "# lasagne.layers.set_all_param_values(dense_output, weight)\n",
+    "weight = np.load('the weight of the networks/xenx_network_v_1_two_inputs_weight.npy')\n",
+    "lasagne.layers.set_all_param_values(dense_output, weight)\n",
     "# weight = lasagne.layers.get_all_param_values(dense_output)\n",
     "# np.save('the weight of the networks/xenx_network_v_1_baseline_weight.npy', weight)"
    ]
@@ -326,11 +318,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "net = theano.compile.function([input_layer.input_var], y_predicted)"
+    "net = theano.compile.function([input_layer.input_var, input_layer2.input_var], y_predicted)"
    ]
   },
   {
@@ -347,7 +339,7 @@
     "full_start_time = time.time() \n",
     "for i in range(count):\n",
     "    start_time = time.time() \n",
-    "    res = net(X_test[:1]) \n",
+    "    res = net(X_test[:1], X_test_new[:1]) \n",
     "    run_time = time.time() - start_time \n",
     "    all_run_time += run_time \n",
     "    # print run_time \n",
@@ -387,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
