add new weight for xenx network V2

--- a/two_inputs.ipynb
+++ b/two_inputs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -70,23 +70,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "np.save('x.npy', X)\n",
-    "np.save('x_new.npy', X_new)\n",
-    "np.save('y.npy', y)\n",
+    "# np.save('x.npy', X)\n",
+    "# np.save('x_new.npy', X_new)\n",
+    "# np.save('y.npy', y)\n",
     "\n",
-    "# X, X_new, y = np.load('x.npy'), np.load('x_new.npy'), np.load('y.npy')\n",
-    "# y_new = y"
+    "X, X_new, y = np.load('x.npy'), np.load('x_new.npy'), np.load('y.npy')\n",
+    "y_new = y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -105,11 +105,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(25000, 1, 60, 60) (25000, 3, 60, 60)\n"
+     ]
+    }
+   ],
    "source": [
     "input_X = T.tensor4(\"X cat/dog image\")\n",
     "target_y = T.vector(\"target Y cat/dog\",dtype='int32')\n",
@@ -130,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -185,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -270,11 +278,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final results:\n",
+      "  test accuracy:\t\t78.60 %\n"
+     ]
+    }
+   ],
    "source": [
     "test_acc = 0\n",
     "test_batches = 0\n",
@@ -302,13 +319,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "weight = np.load('the weight of the networks/xenx_network_v_1_two_inputs_weight.npy')\n",
+    "weight = np.load('the weight of the networks/xenx_network_v_2_two_inputs_weight.npy')\n",
     "lasagne.layers.set_all_param_values(dense_output, weight)\n",
     "# weight = lasagne.layers.get_all_param_values(dense_output)\n",
     "# np.save('the weight of the networks/xenx_network_v_1_baseline_weight.npy', weight)"
@@ -316,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -327,11 +344,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result:\n",
+      "\tRun time:\t\t1.494\n",
+      "\tAverage time:\t\t0.00149\n",
+      "\tPer second:\t\t669.23918\n"
+     ]
+    }
+   ],
    "source": [
     "all_run_time = 0 \n",
     "result = 0 \n",
